# copsweek-ctrlshiftintelligence

./: Bopify.ipynb  README.md  output.csv  pyproject.toml
output/: Bayesian Ridge-test.csv  Bayesian Ridge-train.csv  Decision Tree-test.csv  Decision Tree-train.csv  Gradient Boosting-test.csv  Gradient Boosting-train.csv  K-Nearest Neighbors-test.csv  K-Nearest Neighbors-train.csv  Logistic Regression-test.csv  Logistic Regression-train.csv  Random Forest-test.csv  Random Forest-train.csv  Support Vector Machine-test.csv  Support Vector Machine-train.csv  XGBoost-test.csv  XGBoost-train.csv
