[tool.poetry]
name = "ctrlshiftintelligence"
version = "0.1.0"
description = ""
authors = ["Sagnik Mandal <acriticalcynic@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
matplotlib = "^3.8.4"
scikit-learn = "^1.4.1.post1"
xgboost = "^2.0.3"
seaborn = "^0.13.2"
category-encoders = "^2.6.3"


[tool.poetry.group.dev.dependencies]
kaggle = "^1.6.11"
ipykernel = "^6.29.4"
ruff = "^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
